--- a/Mywebsite.html
+++ b/Mywebsite.html
@@ -2,7 +2,7 @@
 	<head>
 		<title> My Website </title>
 	</head>
-	<body>
+	<body bgcolor="violet">
 		<font color="red"><h1 align="center"> Addagatla Navya </h1></font>
 		<br><br>
 		<a href="#"> Home</a>
