Collect Data From User

--- a/About.html
+++ b/About.html
@@ -5,10 +5,10 @@
 	<body bgcolor="violet">
 		<font color="red"><h1 align="center"> Addagatla Navya </h1></font>
 		<br><br>
-		<a href="Mywebsite.html"> Home</a>
-		<a href="#"> About Us</a>
-		<a href="Services.html"> Services</a>
-		<a href="Contact.html" target="/blank"> Contact Us</a>
+		<a href="Mywebsite.html">&#127969; Home</a>
+		<a href="#">&#128209; About Us</a>
+		<a href="Services.html">&#128130; Services</a>
+		<a href="Contact.html" target="/blank">&#128222;  Contact Us</a>
 		<hr>
 		<p> Here you can know about Navya. I, Navya was born on 1996. I was born and brought up in korutla.</p>
 	</body>
