--- a/Contact.html
+++ b/Contact.html
@@ -1,14 +1,14 @@
 <html>
 	<head>
-		<title> My Website </title>
+		<title> Contact </title>
 	</head>
 	<body bgcolor="violet">
 		<font color="red"><h1 align="center"> Addagatla Navya </h1></font>
 		<br><br>
-		<a href="Mywebsite.html"> Home</a>
-		<a href="About.html"> About Us</a>
-		<a href="Services.html"> Services</a>
-		<a href="#"> Contact Us</a>
+		<a href="Mywebsite.html">&#127969; Home</a>
+		<a href="About.html"> &#128209;About Us</a>
+		<a href="Services.html">&#128130; Services</a>
+		<a href="#"> &#128222; Contact Us</a>
 		<hr>
 		<p> Mail id: addagatlanavya@gmail.com<br>Mobile No. 7386926072</p>
 	</body>
