--- a/Services.html
+++ b/Services.html
@@ -5,10 +5,10 @@
 	<body bgcolor="violet">
 		<font color="red"><h1 align="center"> Addagatla Navya </h1></font>
 		<br><br>
-		<a href="Mywebsite.html"> Home</a>
-		<a href="About.html"> About Us</a>
-		<a href="#"> Services</a>
-		<a href="Contact.html" target="/blank"> Contact Us</a>
+		<a href="Mywebsite.html">&#127969; Home</a>
+		<a href="About.html"> &#128209;About Us</a>
+		<a href="#"> &#128130;Services</a>
+		<a href="Contact.html" target="/blank"> &#128222; Contact Us</a>
 		<hr>
 		<p> The services here by are as per my knowledge I do my best.</p>
 	</body>
