--- a/Mywebsite.html
+++ b/Mywebsite.html
@@ -5,11 +5,19 @@
 	<body bgcolor="violet">
 		<font color="red"><h1 align="center"> Addagatla Navya </h1></font>
 		<br><br>
-		<a href="#"> Home</a>
-		<a href="About.html"> About Us</a>
-		<a href="Services.html"> Services</a>
-		<a href="Contact.html" target="/blank"> Contact Us</a>
+		<a href="#"> &#127969;Home</a>
+		<a href="About.html">&#128209; About Us</a>
+		<a href="Services.html"> ‍&#128130;Services</a>
+		<a href="Contact.html" target="/blank">&#128222; Contact Us</a>
 		<hr>
-		<p> This is the home page of Navya's Blog. Here you can know about Navya.</p>
+		<p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;This is the home page of Navya's Blog. Here you can know about Navya.</p>
+		<video controls height="500" width="500" autoplay muted allowfullscreen picture-in-picture>
+			<source src="01 title.mp4" type="video/mp4">
+		</video>
+		<audio controls autoplay muted>
+			<source src="" type="audio/mp3">
+		</audio>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/Osa53-RYBk4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 	</body>
 </html>
