--- a/UserInput.html
+++ b/UserInput.html
@@ -5,12 +5,13 @@
 	<body>
 		<form>
 		<fieldset>
-			<legend>
+			<legend align="center">
 			<header style="background-color:blue;color:Yellow;">
 			<h1>Registration Form</h1>
 			</header>
 			</legend>
-		<table>
+		<div style="background-color:lightgreen;font-color:violet;">
+		<table align="center" cellpadding="10px">
 			<tr>
 				<td><label> Username: </label></td>
 				<td><input type="text"></td>
@@ -35,10 +36,10 @@
 				</td>
 			</tr>
 			<tr>
-				<td> <label> Qualification: </label> </td>
-				<td> <input type="checkbox" value="MCA"> MCA
-				     <input type="checkbox" value="BE"> BE
-				     <input type="checkbox" value="B.Tech">B.Tech
+				<td> <label> Languages Known: </label> </td>
+				<td> <input type="checkbox" value="Telugu"> Telugu
+				     <input type="checkbox" value="Hindi"> Hindi
+				     <input type="checkbox" value="English">English
 				</td>
 			</tr>
 			<tr>
