News Channel Task

--- a/Tables.html
+++ b/Tables.html
@@ -3,9 +3,9 @@
 		<title> Tables</title>
 	</head>
 	<body>
-		<table cellpadding="5">
+		<table cellpadding="10">
 		<tr>
-			<th colspan="3" align="center"> ANUDIP NEWS CHANNEL</th>
+			<th colspan="3" align="center"> <h1>ANUDIP NEWS CHANNEL</h1></th>
 		</tr>
 		<tr>
 			<td> 1. India got gold medal </td>
