yahoo login cloning task

--- a/Mywebsite.html
+++ b/Mywebsite.html
@@ -1,10 +1,14 @@
 <html>
 	<head>
 		<title> My Website </title>
+		<link href="website.css" rel="stylesheet"> 
 	</head>
 	<body bgcolor="violet">
-		<font color="red"><h1 align="center"> Addagatla Navya </h1></font>
-		<br><br>
+		<header>
+			<img src="https://www.freeiconspng.com/uploads/education-png-23.png" height="100" width="100" style="margin-left:200px;">
+			<span style="margin:-100px -100px 100px 100px">Siddhartha High School<br>Koratla</span>
+		</header>
+		
 		<a href="#"> &#127969;Home</a>
 		<a href="About.html">&#128209; About Us</a>
 		<a href="Services.html"> ‍&#128130;Services</a>
