--- a/fblogin.html
+++ b/fblogin.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title> Facebook Login Page </title>
+		<link rel="icon" href="https://www.freepnglogos.com/uploads/logo-facebook-png/logo-facebook-facebook-logo-transparent-png-pictures-icons-and-0.png" type="image/png" sizes="16x16">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Arimo:wght@700&family=Be+Vietnam:wght@500&family=Syne:wght@500&family=Urbanist:wght@600;900&display=swap" rel="stylesheet">
