--- a/Assignment2.html
+++ b/Assignment2.html
@@ -6,6 +6,9 @@
 		<meta name="Navya" content="Assignment">
 		<meta name="description" content="This is second assignment. It include links and image tags.">
 		<style>
+			*{
+				background-color:lightgrey;
+			}
 		</style>
 	</head>
 	<body>
@@ -24,11 +27,32 @@
 			degrees, depending on the desired flavor. Roasted beans are ground and then brewed 
 			with near-boiling water to produce the beverage known as coffee.
 			</p>
-			<p> Coffee</p>
+			<p> Contents</p>
 			<ol type="1">
-				<li> Roasting </li>
-				<li> Storage </li>
+				<li><a href="#roast"> Roasting </a></li>
+				<li><a href="#stor"> Storage </a></li>
 			</ol>
+			<h3 id="roast">Roasting</h3>
+			<p> Coffee is usually sold in a roasted state, and with rare exceptions, such as infusions from green 
+				coffee beans, coffee is roasted before it is consumed. It can be sold roasted by the supplier, or 
+				it can be home roasted. The roasting process influences the taste of the beverage by changing 
+				the coffee bean both physically and chemically. The bean decreases in weight as moisture is lost 
+				and increases in volume, causing it to become less dense. The density of the bean also 
+				influences the strength of the coffee and requirements for packaging.   
+				The actual roasting begins when the temperature inside the bean reaches approximately 200 °C 
+				(392 °F), though different varieties of seeds differ in moisture and density and therefore roast 
+				at different rates. During roasting, caramelization occurs as intense heat breaks down starches, 
+				changing them to simple sugars that begin to brown, which alters the color of the bean.</p>
+			<h3 id="stor">Storage</h3>
+			<p> Coffee is best stored in an airtight container made of ceramic, glass or non-reactive metal. 
+				Higher quality pre-packaged coffee usually has a one-way valve which prevents air from 
+				entering while allowing the coffee to release gases. Coffee freshness and flavor is preserved 
+				when it is stored away from moisture, heat, and light.  The ability of coffee to absorb strong 
+				smells from food means that it should be kept away from 
+				such smells. Storage of coffee in refrigerators is not recommended due to the presence of 
+				moisture which can cause deterioration. Exterior walls of buildings which face the sun may heat 
+				the interior of a home, and this heat may damage coffee stored near such a wall. Heat from 
+				nearby ovens also harms stored coffee.</p>
 		</div>
 	</body>
 </html>		
